refactor: seperated sb_yew app component to own file

--- a/storybook_yew_app/Cargo.toml
+++ b/storybook_yew_app/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 yew_app_core = { path="../yew_app_core" }
+yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
+yew-router = { git = "https://github.com/yewstack/yew.git" }
