--- a/storybook_yew_app/trunk.toml
+++ b/storybook_yew_app/trunk.toml
@@ -5,3 +5,7 @@ address = "127.0.0.1"
 # address = "0.0.0.0"
 # The port to serve on.
 port = 8001
+
+[watch]
+# Paths to watch. The `build.target`'s parent folder is watched by default.
+watch = ["../yew_app_core/src/components"]
