feat: implemented layout component for sb_app and minor keyevents for sb_app

--- a/storybook_yew_app/Cargo.toml
+++ b/storybook_yew_app/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 yew_app_core = { path="../yew_app_core" }
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 yew-router = { git = "https://github.com/yewstack/yew.git" }
+gloo = "0.11.0"
+gloo-console = "0.3.0"
+wasm-bindgen = "0.2.92"
