--- a/storybook_yew_app/Cargo.toml
+++ b/storybook_yew_app/Cargo.toml
@@ -10,3 +10,4 @@ yew-router = { git = "https://github.com/yewstack/yew.git" }
 gloo = "0.11.0"
 gloo-console = "0.3.0"
 wasm-bindgen = "0.2.92"
+web-sys = "0.3.69"
